Local storage is a map.

--- a/MagicBoxes.html
+++ b/MagicBoxes.html
@@ -66,8 +66,8 @@
        <li>About 
          <ul>
            <li>Magic Boxes in <a href="http://www.dart.org/">Dart</a></li>
-           <li>Spiral 13</li>
-           <li>2012-04-04</li>
+           <li>Spiral 14</li>
+           <li>2012-04-05</li>
            <li>
              <a href="https://plus.google.com/u/0/b/113649577593294551754/">
                On Dart
@@ -186,10 +186,10 @@
     
     <section>
       <header>
-        <h3>Spiral 13: Final Touches</h3>
+        <h3>Spiral 14: Debugging</h3>
       </header>
       <p>
-        With spiral 13, you can design a model such as the meta model 
+        With spiral 14, you can design a model such as the meta model 
         in the following diagram.
       </p>
       <p>
