--- a/MagicBoxes.html
+++ b/MagicBoxes.html
@@ -260,7 +260,8 @@
       <p> 
         The spiral approach to software learning and development, 
         which preserves a project history 
-        as a series of code snapshots or spirals, 
+        as a series of code snapshots or 
+        <a href="http://dzenanr.github.com/">spirals</a>, 
         is used in this project. 
       </p>
       <p> 
