changed the old string concatenations with + to $

--- a/MagicBoxes.html
+++ b/MagicBoxes.html
@@ -66,15 +66,15 @@
        <li>About 
          <ul>
            <li>Magic Boxes in <a href="http://www.dart.org/">Dart</a></li>
-           <li>Spiral 14</li>
-           <li>2012-04-05</li>
+           <li>Spiral 13</li>
+           <li>2012-06-07</li>
            <li>
              <a href="https://plus.google.com/u/0/b/113649577593294551754/">
                On Dart
              </a>
            </li>
            <li>
-             <a href="http://www.ondart.info/"><img src="img/ondart0.png"/></a>
+             <a href="http://dzenanr.github.com/"><img src="img/ondart0.png"/></a>
            </li>
          </ul>   
        </li>
