--- a/magic_boxes.html
+++ b/magic_boxes.html
@@ -178,7 +178,7 @@
       <img alt="Your model as PNG." id="modelImage"/>
     </section>
     
-    <script type="application/dart" src="MagicBoxes.dart"></script>
+    <script type="application/dart" src="magic_boxes.dart"></script>
     <script 
       src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js">
     </script>
