update links in home page

--- a/magic_boxes.html
+++ b/magic_boxes.html
@@ -191,10 +191,10 @@
 
     <section>
       <header>
-        <h3>Spiral 14: Debugging</h3>
+        <h3>The Last Version</h3>
       </header>
       <p>
-        With spiral 14, you can design a model such as the meta model
+        With the last version of Magic Boxes, you can design a model such as the meta model
         in the following diagram.
       </p>
       <p>
@@ -247,7 +247,7 @@
         (after reading the Getting Started section, developing the first
         <a  href="http://goo.gl/udRZX">example</a>,
         and the
-        <a href="https://github.com/dzenanr/pingpong">Ping Pong</a> game).
+        <a href="https://github.com/dzenanr/ping_pong">Ping Pong</a> game).
         The tool is based on
         <a href="http://code.google.com/p/magic-boxes/">Magic Boxes</a> and
         <a href="http://www.modelibra.org/">Modelibra Modeler</a>,
@@ -306,7 +306,7 @@
       </header>
       <p>
         The
-        <a href="https://github.com/dzenanr/MagicBoxes">code</a>
+        <a href="https://github.com/dzenanr/magic_boxes">code</a>
         of Magic Boxes in Dart is kept at
         <a href="https://github.com/">GitHub</a>.
         If you are new to
@@ -317,7 +317,7 @@
         <a href="http://www.ralfebert.de/blog/tools/git_screencast/">start</a>
         learning it.
         However, if you are impatient to start learning Dart, you may want to
-        <a href="https://github.com/dzenanr/MagicBoxes/tags">download</a>
+        <a href="https://github.com/dzenanr/magic_boxes/tags">download</a>
         the spirals.
       </p>
     </section>
@@ -432,6 +432,10 @@
         to save the model.
         Later, paste the JSON text into the JSON panel and click on
         the From JSON button to obtain the model.
+      </p>
+      <p>
+        For a pretty JSON version of the model, click on the Pretty JSON button, 
+        but only after clicking on the To JSON button.
       </p>
       <p>
         Transform a model to a
