--- a/web/magic_boxes.html
+++ b/web/magic_boxes.html
@@ -185,9 +185,7 @@
     </section>
 
     <script type="application/dart" src="magic_boxes.dart"></script>
-    <script
-      src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js">
-    </script>
+    <script src="packages/browser/dart.js"></script>
 
     <section>
       <header>
