--- a/web/magic_boxes.html
+++ b/web/magic_boxes.html
@@ -66,7 +66,7 @@
        <li>About
          <ul>
            <li>Magic Boxes in <a href="http://www.dartlang.org/">Dart</a></li>
-           <li>2012-11-10</li>
+           <li>2013-02-26</li>
            <li>
              <a href="https://plus.google.com/u/0/b/113649577593294551754/">
                On Dart
@@ -117,7 +117,7 @@
           <option>int</option>
           <option>double</option>
           <option>bool</option>
-          <option>Date</option>
+          <option>DateTime</option>
           <option>dynamic</option>
           <option>Uri</option>
           <option>Email</option>
