--- a/web/magic_boxes.html
+++ b/web/magic_boxes.html
@@ -66,7 +66,7 @@
        <li>About
          <ul>
            <li>Magic Boxes in <a href="http://www.dartlang.org/">Dart</a></li>
-           <li>2013-02-26</li>
+           <li>2013-06-16</li>
            <li>
              <a href="https://plus.google.com/u/0/b/113649577593294551754/">
                On Dart
@@ -125,7 +125,6 @@
         </select>
         <label for="itemInit">init</label>
         <input type="text" id="itemInit" size="16"/>
-        <button class="button" id="addItem">Add</button>
         <button class="button" id="getItem">Get</button>
         <button class="button" id="getNextItem">Get +1</button>
         <button class="button" id="getPreviousItem">Get -1</button>
@@ -347,7 +346,7 @@
       <p>
         The last selected box, may be declared as entry into the model.
         A new item may be added to the selected box by entering its name in
-        the Item box, then clicking on the Add button.
+        the Item box.
         The item is an attribute of the box (concept).
         In addition, it may be declared as guid
         (globally unique identifier--not significant to a user),
