update User Guide

--- a/web/magic_boxes.html
+++ b/web/magic_boxes.html
@@ -207,7 +207,7 @@
         <h3>Overview</h3>
       </header>
       <p>
-        With the Model Concepts tool you may create a model of concepts,
+        With the Model Concepts tool you may create a model of concepts
         with attributes and relationships.
         Click the concept tool in the tool bar (brown background)
         to create a concept by clicking on an empty space in the model.
@@ -378,8 +378,7 @@
         an employee works for exactly one department.
       </p>
       <p>
-        The relationship is a relationship between two concepts.
-        It has two directions: from parent to child (neighbor) and
+        A relationship has two directions: from parent to child (neighbor) and
         from child to parent (neighbor). You cannot create more than
         two relationships between the same two concepts.
         The selected relationship may be transformed
