add essential and sensitive

--- a/web/magic_boxes.html
+++ b/web/magic_boxes.html
@@ -129,6 +129,12 @@
         </select>
         <label for="itemInit">init</label>
         <input type="text" id="itemInit" size="16"/>
+        <label for="itemEssential">essential</label>
+        <input type="checkbox" id="itemEssential"/>
+        <label for="itemSensitive">sensitive</label>
+        <input type="checkbox" id="itemSensitive"/>
+        <br/>
+        &nbsp; &nbsp;
         <button class="button" id="getNextItem">Next</button>
         <button class="button" id="getPreviousItem">Previous</button>
         <button class="button" id="moveDownItem">Move Down</button>
