--- a/web/model_concepts.html
+++ b/web/model_concepts.html
@@ -192,7 +192,7 @@
       <p><img alt="Your model as image." id="modelImage"/></p>
     </section>
 
-    <script type="application/dart" src="magic_boxes.dart"></script>
+    <script type="application/dart" src="model_concepts.dart"></script>
     <script src="packages/browser/dart.js"></script>
 
     <section>
