use model_concepts instead of magic_boxes

--- a/web/model_concepts.html
+++ b/web/model_concepts.html
@@ -213,7 +213,7 @@
         <h3>Overview</h3>
       </header>
       <p>
-        With the Model Concepts tool (internal name: Magic Boxes)
+        With the Model Concepts tool
         you may create a model of concepts with attributes and relationships.
         Click the concept tool in the tool bar (brown background)
         to create a concept by clicking on an empty space in the model.
@@ -308,7 +308,7 @@
       </header>
       <p>
         The
-        <a href="https://github.com/dzenanr/magic_boxes">code</a>
+        <a href="https://github.com/dzenanr/model_concepts">code</a>
         of Model Concepts in Dart is kept at
         <a href="https://github.com/">GitHub</a>.
         If you are new to
