update spirals section

--- a/web/model_concepts.html
+++ b/web/model_concepts.html
@@ -268,8 +268,8 @@
         The spiral approach to software learning and development,
         which preserves a project history
         as a series of code snapshots or
-        <a href="http://dzenanr.github.com/">spirals</a>,
-        is used in this project.
+        <a href="http://dzenanr.github.com/">spirals</a>
+        (under the former name of Magic Boxes), is used in this project.
       </p>
       <p>
         Learning new software concepts and technologies is a challenging task.
