--- a/web/model_concepts.html
+++ b/web/model_concepts.html
@@ -359,6 +359,11 @@
         An attribute type may be changed by selecting a different type
         from the pop-up list.
         An attribute may have an initial (default) value.
+        In the attribute init field you may use increment for incrementing a
+        value of the int type in dartling by 1 starting with 1.
+        The empty text indicates that a default value will be a non-null empty
+        String ('').
+        For the DateTime type, the now value determines the today's current time.
         An essential attribute is one of the most important attributes of
         the concept. In a default application, essential attributes
         will be displayed in a list (or a table) of attributes.
