--- a/web/model_concepts.html
+++ b/web/model_concepts.html
@@ -68,14 +68,14 @@
            <li>
              Model Concepts in <a href="http://www.dartlang.org/">Dart</a>
            </li>
-           <li>2013-06-18</li>
+           <li>2013-10-25</li>
            <li>
-             <a href="https://plus.google.com/u/0/b/113649577593294551754/">
+             <a href="https://plus.google.com/+OndartMe">
                On Dart
              </a>
            </li>
            <li>
-             <a href="http://dzenanr.github.com/">
+             <a href="http://dzenanr.github.io/">
                <img src="img/ondart0.png"/>
              </a>
            </li>
@@ -268,7 +268,7 @@
         The spiral approach to software learning and development,
         which preserves a project history
         as a series of code snapshots or
-        <a href="http://dzenanr.github.com/">spirals</a>
+        <a href="http://dzenanr.github.io/">spirals</a>
         (under the former name of Magic Boxes), is used in this project.
       </p>
       <p>
