--- a/web/model_concepts.html
+++ b/web/model_concepts.html
@@ -68,7 +68,7 @@
            <li>
              Model Concepts in <a href="http://www.dartlang.org/">Dart</a>
            </li>
-           <li>2013-10-25</li>
+           <li>2014-03-17</li>
            <li>
              <a href="https://plus.google.com/+OndartMe">
                On Dart
@@ -150,6 +150,8 @@
         </select>
         <label for="lineInternal">internal</label>
         <input type="checkbox" id="lineInternal"/>
+        <button class="button" id="eraseLineNames">erase names</button>
+        <button class="button" id="genLineNames">gen names</button>
         <br/>
         &nbsp; &nbsp;
         <label id="line12Box1">Concept1</label> ->
