Add main.dart file with canvas setup

--- a/web/index.html
+++ b/web/index.html
@@ -194,8 +194,7 @@
       <p><img alt="Your model as image." id="modelImage"/></p>
     </section>
 
-    <script type="application/dart" src="model_concepts.dart"></script>
-    <script src="packages/browser/dart.js"></script>
+    <script type="application/javascript" src="main.dart.js"></script>
 
     <section>
       <header>
